Added padding to list items

--- a/src/components/nutrition-search-results.css
+++ b/src/components/nutrition-search-results.css
@@ -3,8 +3,17 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  padding: 0;
 }
 
 li {
   margin-bottom: 10px;
+}
+
+.nutrition-facts {
+  padding: 0;
+}
+
+.nutrition-list-item {
+  padding: 25px 25px 25px 25px;
 }
