--- a/src/components/exercise-results.css
+++ b/src/components/exercise-results.css
@@ -1,7 +1,12 @@
+.exercise-results-section {
+  text-align: center;
+}
+
 .exercise-results {
   padding: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  text-align: left;
 }
