Added styling to nutrition-page and exercise-page

--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -17,3 +17,13 @@ h3 {
 li {
   padding: 5px;
 }
+
+.nutrition-page, .exercise-page {
+  display: inline-block;
+  width: 335px;
+  padding: 15px;
+}
+
+textarea {
+  margin: 15px 0 15px 0;
+}
