Added styling to div line

--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -7,11 +7,15 @@
   max-width: 335px;
   display: inline-block;
   text-align: left;
-  padding: 15px;
+  padding: 0 35px;
 }
 
 h3 {
   text-align: center;
+}
+
+ul {
+  padding: 0;
 }
 
 li {
@@ -31,6 +35,7 @@ textarea {
 .log-out {
   float: right;
   padding: 15px 25px 0 0;
+  text-decoration: none;
 }
 
 .nutrition_total, .exercise_total {
@@ -56,4 +61,9 @@ span {
   left: 1px;
   font-size: .8rem;
   font-weight: bolder;
+}
+
+.line {
+  border-bottom: 2px solid black;
+  margin: 35px 0 10px 0;
 }
