--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -53,9 +53,9 @@ textarea {
   cursor: pointer;
 }
 
-span {
+.exit {
   position: absolute;
-  top: -1px;
+  top: -2px;
   right: 1px;
   bottom: 0;
   left: 1px;
