Added more styling to log-out button

--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -36,6 +36,7 @@ textarea {
   float: right;
   padding: 15px 25px 0 0;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .nutrition_total, .exercise_total {
