--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -23,6 +23,7 @@ li {
 }
 
 .nutrition-page, .exercise-page {
+  position: relative;
   display: inline-block;
   width: 335px;
   padding: 15px;
@@ -37,6 +38,11 @@ textarea {
   padding: 15px 25px 0 0;
   text-decoration: none;
   cursor: pointer;
+  z-index: 1;
+  position: relative;
+  font-weight: bold;
+  color: whitesmoke;
+  letter-spacing: 1px;
 }
 
 .nutrition_total, .exercise_total {
@@ -65,6 +71,33 @@ textarea {
 }
 
 .line {
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #71bced;
   margin: 35px 0 10px 0;
+}
+
+.shape {
+  position: relative;
+  height: 600px;
+}
+
+.shape::before {
+  border-radius: 100%;
+  position: absolute;
+  background: linear-gradient(130deg, #66b9ea, #6d78e7);
+  content: '';
+  bottom: 0;
+  right: -200px;
+  left: -200px;
+  top: -200px;
+}
+
+.welcome-header {
+  color: whitesmoke;
+  position: relative;
+}
+
+@media (max-width: 745px) {
+  .shape {
+    height: 1000px;
+  }
 }
