--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -29,6 +29,10 @@ li {
   padding: 15px;
 }
 
+.nutrition-page {
+  margin-right: 45px;
+}
+
 textarea {
   margin: 15px 0 15px 0;
 }
@@ -81,7 +85,7 @@ textarea {
 }
 
 .shape::before {
-  border-radius: 100%;
+  border-radius: 35%;
   position: absolute;
   background: linear-gradient(130deg, #66b9ea, #6d78e7);
   content: '';
@@ -94,6 +98,49 @@ textarea {
 .welcome-header {
   color: whitesmoke;
   position: relative;
+}
+
+label {
+  color: whitesmoke;
+  font-weight: bolder;
+  font-size: 1.2rem;
+  letter-spacing: .4px;
+}
+
+form {
+  text-align: left;
+}
+
+.calculate-btn {
+  border: none;
+  background: linear-gradient(130deg, #ffa634, #ff435b);
+  color: whitesmoke;
+  font-family: Questrial;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  width: 200px;
+  height: 40px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+textarea {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 150px;
+  font-family: Questrial;
+  font-size: 1rem;
+}
+
+textarea::placeholder {
+  font-size: 1rem;
+  font-family: Questrial;
+  letter-spacing: .5px;
 }
 
 @media (max-width: 745px) {
