Added styling to span and header elements

--- a/src/stylesheets/components/_login-page.scss
+++ b/src/stylesheets/components/_login-page.scss
@@ -40,6 +40,7 @@ input::placeholder {
 
 h1, h3 {
   color: #999999;
+  text-align: center;
 }
 
 h3 {
@@ -48,6 +49,7 @@ h3 {
 
 span {
   color: #363636;
+  font-weight: bolder;
 }
 
 .link-text {
