--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -38,6 +38,7 @@ li {
   display: inline-block;
   width: 335px;
   padding: 15px;
+  margin-top: 75px;
 }
 
 .nutrition-page {
@@ -68,18 +69,22 @@ textarea {
   position: absolute;
   top: 0;
   right: 0;
-  height: 15px;
-  width: 5px;
-  border-radius: 50px;
-  border: 2px solid black;
   cursor: pointer;
+  border-radius: 40px;
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border: 2px solid #41cd8c;
+  color: #41cd8c;
+  padding-left: 10px;
+  padding-top: 4px;
 }
 
 .exit {
+  color: #41cd8c;
   position: absolute;
-  top: -2px;
-  right: 1px;
-  bottom: 0;
+  top: 0;
+  right: 0;
   left: 1px;
   font-size: .8rem;
   font-weight: bolder;
