Added children divs, welcome header, and h3 elements into media queries

--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -179,6 +179,17 @@ textarea::placeholder {
 }
 
 @media (max-width: 400px) {
+  .totals-container > div {
+    padding: 0;
+  }
+
+  .welcome-header {
+    font-size: 4rem;
+  }
+  h3 {
+    font-size: 2rem;
+  }
+  
   .nutrition-page, .exercise-page {
     width: 260px;
   }
