Changed url for check mark image

--- a/src/stylesheets/components/_landing-page.scss
+++ b/src/stylesheets/components/_landing-page.scss
@@ -118,7 +118,7 @@
 }
 
 .container-list-item {
-  background: url('../images/checkmark-512.png') 0 2px no-repeat;
+  background: url('../images/checkmark.png') 0 2px no-repeat;
   background-size: 21px 17px;
   padding-left: 33px;
   position: relative;
