--- a/src/stylesheets/components/_results-page.scss
+++ b/src/stylesheets/components/_results-page.scss
@@ -10,19 +10,11 @@
   padding: 0;
 } 
 
-/* li {
-  margin-bottom: 10px;
-} */
-
 .nutrition-facts {
   padding: 0;
   margin-top: 25px;
   text-align: left;
 }
-
-/* .nutrition-list-item {
-  padding: 25px 25px 25px 25px;
-} */
 
 .go-home-btn {
   position: absolute;
@@ -30,11 +22,48 @@
   left: 0;
   padding-left: 25px;
   cursor: pointer;
+  color: whitesmoke;
+  font-weight: bolder;
+  letter-spacing: 1px;
 }
 .logout-btn {
   position: absolute;
   top: 0;
   right: 0;
   padding-right: 25px;
+  cursor: pointer;
+  color: whitesmoke;
+  font-weight: bolder;
+  letter-spacing: 1px;
+}
+
+.nutrition-list {
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  padding-left: 25px;
+}
+.nutrition-list-item {
+  padding: 0;
+  text-align: left;
+}
+.food-name {
+  text-align: left;
+}
+
+.save-btn {
+  border: none;
+  background: linear-gradient(130deg, #ffa634, #ff435b);
+  color: whitesmoke;
+  font-family: Questrial;
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+  width: 200px;
+  height: 40px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
   cursor: pointer;
 }
