--- a/src/stylesheets/components/_results-page.scss
+++ b/src/stylesheets/components/_results-page.scss
@@ -75,3 +75,20 @@
 .exercise-totals, .nutrition-results-container {
   padding-bottom: 50px;
 }
+
+.exercise-results-section {
+  text-align: center;
+}
+
+.exercise-results {
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  text-align: left;
+}
+
+.exercise-list-item > p > span {
+  color: #41cd8c;
+}
