--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -19,6 +19,12 @@
   text-align: left;
   padding: 0 35px;
 }
+.nutrition-totals-container, .exercise-totals-container {
+  visibility: visible;
+}
+.invisible {
+  visibility: hidden;
+}
 
 h3 {
   text-align: center;
@@ -65,6 +71,7 @@ textarea {
 
 .nutrition_total, .exercise_total {
   position: relative;
+  list-style-type: none;
 }
 
 .delete-btn {
@@ -236,7 +243,7 @@ textarea::placeholder {
     padding: 0 25px 0 25px;
   }
   .delete-btn {
-    margin-right: 25px;
+    margin-right: 15px;
   }
 }
 
