Added hover animation for log out button and home button

--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -69,6 +69,10 @@ textarea {
   letter-spacing: 1px;
 }
 
+.log-out:hover {
+  text-decoration: underline;
+}
+
 .nutrition_total, .exercise_total {
   position: relative;
   list-style-type: none;
