Added underline for hover with log-out, login, and signup

--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -69,7 +69,8 @@ textarea {
   letter-spacing: 1px;
 }
 
-.log-out:hover {
+
+.log-out:hover, .landing-login:hover, .landing-signup:hover {
   text-decoration: underline;
 }
 
