Added hover and focus to landing-page-signup-btn

--- a/src/stylesheets/components/_landing-page.scss
+++ b/src/stylesheets/components/_landing-page.scss
@@ -17,7 +17,7 @@
   right: 0;
   bottom: -15px;
   border: none;
-  background: linear-gradient(130deg, #ffa634, #ff435b);
+  background-color: #fe7749;
   color: whitesmoke;
   font-family: Questrial;
   font-size: 1rem;
@@ -28,6 +28,12 @@
   margin-left: auto;
   margin-right: auto;
   border-radius: 20px;
+  transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+}
+.landing-page-signup-btn:hover,
+.landing-page-signup-btn:focus {
+  background-color: #ffb300;
   cursor: pointer;
 }
 
