--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -138,7 +138,7 @@ label {
 
 .calculate-btn {
   border: none;
-  background: linear-gradient(130deg, #ffa634, #ff435b);
+  background-color: #fe7749;
   color: whitesmoke;
   font-family: Questrial;
   font-size: 1rem;
@@ -149,6 +149,11 @@ label {
   margin-left: auto;
   margin-right: auto;
   border-radius: 20px;
+  transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+}
+.calculate-btn:hover, .calculate-btn:focus {
+  background-color: #ffb300;
   cursor: pointer;
 }
 
