--- a/src/stylesheets/components/_results-page.scss
+++ b/src/stylesheets/components/_results-page.scss
@@ -61,7 +61,7 @@
 
 .save-btn {
   border: none;
-  background: linear-gradient(130deg, #ffa634, #ff435b);
+  background-color: #fe7749;
   color: whitesmoke;
   font-family: Questrial;
   font-size: 1.1rem;
@@ -72,7 +72,13 @@
   margin-left: auto;
   margin-right: auto;
   border-radius: 20px;
+  transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+}
+.save-btn:hover, .save-btn:focus {
+  outline: none;
   cursor: pointer;
+  background-color: #ffb300;
 }
 
 .exercise-totals, .nutrition-results-container {
