Added padding-top to signup and login

--- a/src/stylesheets/components/_landing-page.scss
+++ b/src/stylesheets/components/_landing-page.scss
@@ -60,6 +60,7 @@
   cursor: pointer;
   font-weight: bolder;
   text-decoration: none;
+  padding-top: 15px;
 }
 .landing-login {
   margin-right: 105px;
