Added cursor pointer to link-text

--- a/src/stylesheets/components/_login-page.scss
+++ b/src/stylesheets/components/_login-page.scss
@@ -100,6 +100,7 @@ span {
   color: #363636;
 }
 .link-text:hover, .link-text:focus {
+  cursor: pointer;
   text-decoration: underline;
   outline: none;
 }
