Added opacity-out and opacity_effect animation

--- a/src/stylesheets/components/_all.scss
+++ b/src/stylesheets/components/_all.scss
@@ -14,3 +14,27 @@ body {
   height: 100%;
   background-color: white;
 }
+
+.login-page, .registration-page,
+.landing-page, .dashboard {
+  animation: opacity_effect 0.3s;
+}
+@keyframes opacity_effect {
+  0% {
+    opacity: 0;
+  }
+  100% {
+   opacity: 1;
+  }
+}
+.opacity-out {
+  animation: opacity_out 0.3s;
+}
+@keyframes opacity_out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
