--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,5 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Questrial;
-}
-
-ul {
-  list-style-type: none;
-}
+@import "./stylesheets/components/all";
+@import "./stylesheets/components/dashboard";
+@import "./stylesheets/components/landing-page";
+@import "./stylesheets/components/login-page";
+@import "./stylesheets/components/results-page";
