Added display flex to loading container

--- a/src/stylesheets/components/_login-page.scss
+++ b/src/stylesheets/components/_login-page.scss
@@ -6,7 +6,7 @@ form {
   text-align: center;
 }
 
-.login-page, .registration-page {
+.login-page, .registration-page, .loading-container {
   height: 100%;
   display: flex;
   flex-direction: column;
