--- a/src/stylesheets/components/_results-page.scss
+++ b/src/stylesheets/components/_results-page.scss
@@ -123,13 +123,13 @@
   border-radius: 50%;
 }
 .loader {
-  background: linear-gradient(130deg, #66b9ea, #6d78e7);
+  background: whitesmoke;
   color: black;
   font-size: .75rem;;
   text-indent: -99999em;
   margin: 55px auto;
   position: absolute;
-  top: 80%;
+  top: 55%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -141,12 +141,12 @@
 .loader:after {
   position: absolute;
   content: '';
-  background: linear-gradient(130deg, #66b9ea, #6d78e7);
+  background: black;
 }
 .loader:before {
   width: 5.2em;
   height: 10.2em;
-  background: linear-gradient(130deg, #66b9ea, #6d78e7);
+  background: white;
   border-radius: 10.2em 0 0 10.2em;
   top: -0.1em;
   left: -0.1em;
@@ -158,7 +158,7 @@
 .loader:after {
   width: 5.2em;
   height: 10.2em;
-  background: linear-gradient(130deg, #66b9ea, #6d78e7);
+  background: white;
   border-radius: 0 10.2em 10.2em 0;
   top: -0.1em;
   left: 5.1em;
