Changed background color of loader

--- a/src/stylesheets/components/_results-page.scss
+++ b/src/stylesheets/components/_results-page.scss
@@ -123,7 +123,7 @@
   border-radius: 50%;
 }
 .loader {
-  background: whitesmoke;
+  background: white;
   color: black;
   font-size: .75rem;;
   text-indent: -99999em;
