--- a/src/stylesheets/components/_login-page.scss
+++ b/src/stylesheets/components/_login-page.scss
@@ -86,7 +86,7 @@ input::placeholder {
   border: 1px solid #f4f3f0;
   background-color: #f4f3f0;
   border-radius: 15px;
-  padding: 50px 20px 50px 20px;
+  padding: 0 20px 20px 20px;
   text-align: center;
 }
 
@@ -105,6 +105,13 @@ span {
   outline: none;
 }
 
+.demo-container {
+  margin-top: 25px;
+  line-height: 1.3;
+}
+.demo-title {
+  font-size: 1.2rem;
+}
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0;
@@ -136,12 +143,12 @@ span {
 
 @media (min-width: 410px) {
   .login-form {
-    padding: 100px 50px 100px 50px;
+    padding: 30px 50px 50px 50px;
   }
 }
 
 @media (min-width: 900px) {
   .login-form {
-    padding: 150px 85px 175px 85px;
+    padding: 75px;
   }
 }
