--- a/src/stylesheets/components/_login-page.scss
+++ b/src/stylesheets/components/_login-page.scss
@@ -1,8 +1,4 @@
-form {
-  text-align: center;
-}
-
-.form-input {
+form, .form-input {
   text-align: center;
 }
 
@@ -12,10 +8,6 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.nutrition-counter-header {
-  text-decoration: none;
 }
 
 input, .login-btn, .registration-btn {
@@ -68,6 +60,10 @@ input::placeholder {
   position: absolute;
   top: 0;
   padding-top: 15px;
+  text-decoration: none;
+  @media (max-width: 330px) {
+    font-size: 2.8rem;
+  }
 }
 .nutrition-counter-header:hover {
   cursor: pointer;
@@ -88,6 +84,12 @@ input::placeholder {
   border-radius: 15px;
   padding: 0 20px 20px 20px;
   text-align: center;
+  @media (min-width: 410px) {
+    padding: 30px 50px 50px 50px;
+  }
+  @media (min-width: 900px) {
+    padding: 75px;
+  }
 }
 
 span {
@@ -133,22 +135,4 @@ span {
 .fadeIn {
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
-}
-
-@media (max-width: 330px) {
-  .nutrition-counter-header {
-    font-size: 2.8rem;
-  }
-}
-
-@media (min-width: 410px) {
-  .login-form {
-    padding: 30px 50px 50px 50px;
-  }
-}
-
-@media (min-width: 900px) {
-  .login-form {
-    padding: 75px;
-  }
 }
