Removed redux form, implemented custom forms and inputs, added styling for error messages, added reducer for creating new user

--- a/src/stylesheets/components/_login-page.scss
+++ b/src/stylesheets/components/_login-page.scss
@@ -92,6 +92,13 @@ input::placeholder {
   }
 }
 
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 span {
   color: #363636;
   font-weight: bolder;
@@ -135,4 +142,30 @@ span {
 .fadeIn {
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
+}
+
+.error-container {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.error-form {
+  width: 300px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: whitesmoke;
+  border: 1px solid whitesmoke;
+  border-radius: 4px;
+  text-align: center;
+}
+.error-message {
+  font-size: 1.75rem;
+}
+.login-error-msg {
+  margin-top: -10px;
 }
