--- a/src/stylesheets/components/_login-page.scss
+++ b/src/stylesheets/components/_login-page.scss
@@ -20,6 +20,7 @@ input {
   border-radius: 0;
   background-color: #f4f3f0;
   padding: 5px;
+  font-size: 16px;
 }
 input:focus {
   outline: none;
