--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -93,8 +93,7 @@ textarea {
   background-color: white;
   border: 2px solid #41cd8c;
   color: #41cd8c;
-  padding-left: 10px;
-  padding-top: 4px;
+  padding: 5px 0 0 5px;
   transition: 0.4s;
 }
 .delete-btn:hover {
@@ -108,7 +107,6 @@ textarea {
   top: 0;
   right: 0;
   left: 1px;
-  font-size: .8rem;
   font-weight: bolder;
   transition: 0.4s;
 }
@@ -296,6 +294,12 @@ textarea::placeholder {
 
   label {
     font-size: 1rem;
+  }
+}
+
+@media (min-width: 415px) {
+  .exit {
+    font-size: .8rem;
   }
 }
 
